<resources>
    <string name="app_name">Picnic Store</string>
    <string name="Welcome">Welcome To The Store</string>
    <string name="LegalAge">The store sells alcholic bevrages in order to proceed to the store you need to confirm you are 18+</string>
    <string name="Confirm">Confirm</string>
    <string name="Decline">Decline</string>
    <string name="PicnicShop">Picnic</string>
    <string name="Delivery">Delivery</string>
    <string name="PickUp">Pick Up</string>
    <string name="StoreInfo">Store Info:</string>
    <string name="Street">Golomb 52,Holon</string>
    <string name="WorkingHours">Working Hours:</string>
    <string name="HourDescription">8:00-21:30 Sunday-Thursday</string>
    <string name="OrderChoice">Please choose how to get your order:</string>
    <string name="LegalMessage">We are deeply sorry but you can\'t proceed to the store</string>
    <string name="fillDetails">Please fill in your info</string>
    <string name="fullname">Full Name</string>
    <string name="email">Email Adress</string>
    <string name="phone">Phone Number</string>
    <string name="messpickdate">choose pick up date:</string>
    <string name="clicktopick">click here</string>
    <string name="chosenDate">The date you picked is:</string>
    <string name="messpictime">choose pick up time:</string>
    <string name="chosenTime">The time you picked:</string>
    <string name="Adress">Adress:</string>
    <string name="Continue">continue</string>
    <string name="noname">please enter a name</string>
    <string name="nophone">please enter a phone</string>
    <string name="noemail">please enter an email</string>
    <string name="nodate">plese pick a date</string>
    <string name="notime">please pick a time</string>
    <string name="deliveryinfo">Delivery Info:</string>
    <string name="deliverytime">The delivery arrives within two business days</string>
    <string name="deliveryadress">Delivery Adress</string>
    <string name="noadress">please enter an adress</string>
    <string name="ordertype">Order type:</string>
    <string name="orderinfo">Order Info:</string>
    <string name="chooseyourorder">Please Choose your order:</string>
    <string name="order">Order</string>
    <string name="ordersummary">Order Summary:</string>
    <string name="scroll">(Scroll to see the whole order)</string>
    <string name="submitrating">Thank you for rating the shop!</string>
    <string name="Thanku">Thank you for purchasing!</string>
    <string name="pleaserate">Please rate the store:</string>
    <string name="yourated">You rated:</string>
    <string name="Redwine">Red Wine</string>
    <string name="pickamount">Pick Amount:</string>
    <string name="cheeseplate">Cheese Plate</string>
    <string name="BasketandTable">Basket and Tablecloth</string>
    <string name="WhiteBread">White Bread</string>
    <string name="finish">Finish</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
</resources>