<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/picnicbackground">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="60dp"
        android:background="@color/Pink" />

    <TextView
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/Delivery"
        android:textColor="@color/black"
        android:textSize="50sp"></TextView>

    <TextView
        android:id="@+id/fillDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_title"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="35dp"
        android:text="@string/fillDetails"
        android:fontFamily="@font/boogaloo"
        android:textColor="@color/black"
        android:textSize="35dp" />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/fillDetails"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/edittext"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="12dp"
        android:fontFamily="@font/boogaloo"
        android:hint="@string/fullname"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/fullName"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/edittext"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:fontFamily="@font/boogaloo"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/email"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/edittext"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="12dp"
        android:fontFamily="@font/boogaloo"
        android:hint="@string/phone"
        android:inputType="number"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/phone"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/edittext"
        android:drawableStart="@drawable/ic_house"
        android:drawablePadding="12dp"
        android:fontFamily="@font/boogaloo"
        android:hint="@string/deliveryadress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:inputType="text"/>

    <Button
        android:id="@+id/continuebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_selector"
        android:layout_below="@id/address"
        android:layout_marginTop="25dp"
        android:layout_centerInParent="true"
        android:text="@string/Continue"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:fontFamily="@font/boogaloo"
        android:textSize="20dp"/>


</RelativeLayout>