<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
android:id="@+id/layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:android="http://schemas.android.com/apk/res/android"
android:background="@drawable/picnicbackground">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="60dp"
        android:background="@color/Pink" />

    <TextView
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/PickUp"
        android:textColor="@color/black"
        android:textSize="50sp"></TextView>

    <TextView
        android:id="@+id/fillDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_title"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="35dp"
        android:text="@string/fillDetails"
        android:fontFamily="@font/boogaloo"
        android:textColor="@color/black"
        android:textSize="35dp" />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/fillDetails"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/edittext"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="12dp"
        android:fontFamily="@font/boogaloo"
        android:hint="@string/fullname"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/fullName"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_email"
        android:fontFamily="@font/boogaloo"
        android:drawablePadding="12dp"
        android:hint="@string/email"
        android:background="@drawable/edittext"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/email"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="12dp"
        android:hint="@string/phone"
        android:fontFamily="@font/boogaloo"
        android:background="@drawable/edittext"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:inputType="number"/>

    <TextView
        android:id="@+id/pickdatenote"
        android:fontFamily="@font/boogaloo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="35dp"
        android:text="@string/messpickdate"
        android:textColor="@color/black"
        android:textSize="25sp"></TextView>

    <Button
        android:id="@+id/datepickbtn"
        android:layout_width="wrap_content"
        android:fontFamily="@font/boogaloo"
        android:layout_height="30dp"
        android:layout_below="@id/phone"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/pickdatenote"
        android:background="@drawable/shape_selector"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/clicktopick"
        android:textAlignment="textStart"/>

    <TextView
        android:id="@+id/showdate"
        android:fontFamily="@font/boogaloo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/datepickbtn"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="35dp"
        android:textColor="@color/black"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/picktimenote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/showdate"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="35dp"
        android:fontFamily="@font/boogaloo"
        android:text="@string/messpictime"
        android:textColor="@color/black"
        android:textSize="25sp"></TextView>

    <Button
        android:id="@+id/timepickbtn"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@id/showdate"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/picktimenote"
        android:background="@drawable/shape_selector"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:fontFamily="@font/boogaloo"
        android:text="@string/clicktopick"
        android:textAlignment="textStart"/>
    <TextView
        android:id="@+id/showtime"
        android:fontFamily="@font/boogaloo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timepickbtn"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="35dp"
        android:textColor="@color/black"
        android:textSize="20sp" />
    <Button
        android:id="@+id/continuebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_selector"
        android:layout_below="@id/showtime"
        android:layout_marginTop="25dp"
        android:layout_centerInParent="true"
        android:text="@string/Continue"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:fontFamily="@font/boogaloo"
        android:textSize="20dp"/>




</RelativeLayout>